cargo-features = ["edition"]

[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
description = "Linux SocketCAN library. Send and receive CAN frames via CAN bus on Linux."
documentation = "https://docs.rs/socketcan"
license = "MIT"
name = "socketcan"
repository = "https://github.com/mbr/socketcan-rs"
version = "2.0.0"
edition = "2018"

[dependencies]
bitflags = "1.0"
byte_conv = "0.1"
futures = "0.1"
hex = "^0.2"
itertools = "^0.7"
libc = "^0.2"
mio = "0.6"
netlink-rs = { git = "https://github.com/netlink-rs/netlink-rs", rev = "c008b4e385e3c0a114ec907ca28ad4fe33233ed5" }
nix = "^0.15"
tokio = "0.1"

[features]
vcan_tests = []
